adjust the line height

--- a/william-profile/src/assets/languages/translations.json
+++ b/william-profile/src/assets/languages/translations.json
@@ -14,7 +14,7 @@
     "my_projects": "My Projects",
     
     "about_me": "About Me",
-    "about_me_content": "I am a software developer with a passion for creating innovative solutions. I have experience in web development, mobile app development, and software engineering. I am always looking for new challenges and opportunities to learn and grow.",
+    "about_me_content": "I am a new graduate from Auckland University of Technology. I have experience in Java Development, Web Development and Arduino Development. I reckon the tech industry is always evolving as such I'm always willing to learn and improve my skills. I'm motivated to face challenges and solve difficulties.",
     
     
     "contact_me": "Contact Me",
