--- a/william-profile/src/assets/languages/translations.json
+++ b/william-profile/src/assets/languages/translations.json
@@ -14,8 +14,8 @@
     "my_projects": "My Projects",
     
     "about_me": "About Me",
-    "about_me_content": "I graduated from Auckland University of Technology with a focus on Software Development. I studied Java, object-oriented programming, and agile development frameworks. I also independently learned C++, Arduino, C#, and Unity 2D for game development.",
-    "about_me_content_2": "During university, I mentored new computer science students as a peer mentor. I believe in continuous learning and improvement, which inspired me to create this website. Let's keep progressing.",
+    "about_me_content": "I hold a degree in Software Development from Auckland University of Technology, where I specialized in Java, object-oriented programming, and agile development methodologies. Additionally, I pursued independent study in diverse areas such as C++, Arduino, C#, and Unity 2D for game development.",
+    "about_me_content_2": "Throughout my university journey, I had the privilege of serving as a peer mentor, guiding and supporting new computer science students. This experience reinforced my belief in the value of continuous learning and growth, which ultimately motivated me to embark on the creation of this website. Together, let's embrace the spirit of progress and keep moving forward.",
     "updating": "Thanks for your visiting, this project will continuously updating...",
     
     "contact_me": "Contact Me",
