add project detail page

--- a/william-profile/src/assets/languages/translations.json
+++ b/william-profile/src/assets/languages/translations.json
@@ -14,8 +14,7 @@
     "my_projects": "My Projects",
     
     "about_me": "About Me",
-    "about_me_content": "I graduated from Auckland University of Technology with a focus on Software Development. I studied Java, object-oriented programming, and agile development frameworks. I also independently learned C++, Arduino, C#, and Unity 2D for game development.",
-    "about_me_content_2": "During university, I mentored new computer science students as a peer mentor. I believe in continuous learning and improvement, which inspired me to create this website. Let's keep progressing.",
+    "about_me_content": "Welcome to my portfolio! I'm a software developer skilled in Java, C++, C#, and Unity 2D. Passionate about continuous learning and improvement, I created this site to showcase my projects. Let's keep progressing together!",
     "updating": "Thanks for your visiting, this project will continuously updating...",
     
     "contact_me": "Contact Me",
