update boysnight content

--- a/william-profile/src/assets/languages/translations.json
+++ b/william-profile/src/assets/languages/translations.json
@@ -14,7 +14,7 @@
     "my_projects": "My Projects",
     
     "about_me": "About Me",
-    "about_me_content": "Welcome to my portfolio! I'm a software developer skilled in Java, C++, C#, and Unity 2D. Passionate about continuous learning and improvement, I created this site to showcase my projects. Let's keep progressing together!",
+    "about_me_content": "Welcome to my portfolio! As a new software developer with a passion for continuous learning and improvement, I created this site to showcase my projects. Join me on this journey of growth and innovation! Let's keep progressing together!",
     "updating": "Thanks for your visiting, this project will continuously updating...",
     
     "contact_me": "Contact Me",
